Name:                   cabal-macosx
Version:                0.2.3.5
Stability:              Alpha
Synopsis:               Cabal support for creating Mac OSX application bundles.
Description:

    GUI applications on Mac OSX must be run as application /bundles/;
    these wrap an executable in a particular directory structure which
    can also carry resources such as icons, program metadata, other
    binaries, and copies of shared libraries.

    This package provides Cabal support for creating such application
    bundles.

    For more information about OSX application bundles, look for the
    /Bundle Programming Guide/ on the /Apple Developer Connection/
    website, <http://developer.apple.com/>.

Category:               Distribution
License:                BSD3
License-file:           LICENSE
Copyright:              Eric Kow & Andy Gimblett
Author:                 Eric Kow <eric.kow@gmail.com> & Andy Gimblett <haskell@gimbo.org.uk>
Maintainer:             Daniele Francesconi <dfrancesconi12@gmail.com>
Homepage:               http://github.com/danfran/cabal-macosx
Build-Type:             Simple
Cabal-Version:          >=1.8

Source-Repository head
    Type:         git
    Location:     http://github.com/danfran/cabal-macosx

Library
  Build-Depends:    base >= 4 && < 5
                    , Cabal >= 1.6, directory
                    , hscolour >=1.8
                    , fgl >= 5.4.2.2 && < 5.6
                    , filepath
                    , parsec
                    , process
                    , text
                    , containers
  Exposed-modules:  Distribution.MacOSX
  Other-modules:    Distribution.MacOSX.Internal,
                    Distribution.MacOSX.Common,
                    Distribution.MacOSX.AppBuildInfo,
                    Distribution.MacOSX.Dependencies,
                    Distribution.MacOSX.DG
  ghc-options:      -fwarn-tabs -Wall

Executable macosx-app
  Main-is:          macosx-app.hs
  Build-Depends:    base >= 4 && < 5
                    , Cabal >= 1.6
                    , directory
                    , fgl >= 5.4.2.2 && < 5.6
                    , filepath
                    , parsec
                    , process
                    , text
                    , containers

test-suite tests
  ghc-options:      -Wall
  hs-source-dirs:   .,tests
  Main-is:          Main.hs
  Type:             exitcode-stdio-1.0
  Other-modules:    Distribution.MacOSX.Internal.Tests
  Build-depends:    base >= 4 && < 4.10
                    , HUnit >= 1.2 && < 1.4
                    , test-framework == 0.8.*
                    , test-framework-hunit == 0.3.*
                    , temporary
                    , Cabal >= 1.6
                    , filepath
                    , process
                    , text
                    , containers
                    , directory
