Name:                   wxHello
Version:                0.1.0
Stability:              Alpha
Synopsis:               Platform-sensitive version of wxHello example.
Description:
    Modified version of wxHello example demonstrating how to make
    dependency on cabal-macosx platform senstitive.  Please see the
    README for more information.
Category:               Data
License:                BSD3
License-file:           LICENSE
Copyright:              Andy Gimblett <haskell@gimbo.org.uk>
Author:                 Andy Gimblett <haskell@gimbo.org.uk>
Maintainer:             Andy Gimblett <haskell@gimbo.org.uk>
Build-Type:             Custom
Cabal-Version:          >=1.6

Executable WxHello
  hs-source-dirs:       src
  Main-is:              Main.hs
  if os(darwin)
    Build-Depends:        base >= 3 && < 5, cabal-macosx, wx
  else
    Build-Depends:        base >= 3 && < 5, wx
  ghc-options:          -fwarn-tabs -threaded -Wall
